# kali-nethunter-app

./: .gitattributes  .gitignore  .gitlab-ci.yml  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  gradle.properties  gradlew  native-lib.cpp  proguard-project.txt
.github/workflows/: build.yml  import-gitlab-branches.yml  sync-from-gitlab.yml
assets/scripts/: bootkali  bootkali_bash  bootkali_env  bootkali_init  bootkali_log  bootkali_login  chrootmgr  killkali  start-apache  start-beef-xss  start-dnsmasq  start-hostapd  start-iptables  start-openvpn  start-ssh  start-vpn  start_gpsd  stop-apache  stop-beef-xss  stop-dhcp  stop-dnsmasq  stop-gpsd  stop-ssh  stop-vpn
res/color/: box_stroke_color.xml  nh_box_stroke_iface.xml  nh_box_stroke_spinner.xml  switch_extensive_logging_track.xml
res/drawable/: bg_card_tech.xml  bg_send_tech.xml  bg_send_tech_shape.xml  bg_tech_gradient.xml  ev_twin_badge_24.xml  ic_action_anykernel.xml  ic_action_controller.xml  ic_action_floating.xml  ic_android.xml  ic_arrow_downward.xml  ic_bluesky.xml  ic_close_red.xml  ic_device.xml  ic_discord.xml  ic_edit.xml  ic_expand_less.xml  ic_expand_more.xml  ic_github.xml  ic_gitlab.xml  ic_info.xml  ic_kismet.xml  ic_mastodon.xml  ic_module_loaded.xml  ic_module_not_loaded.xml  ic_palette.xml  ic_refresh.xml  ic_send.xml  ic_settings.xml  ic_website.xml  ic_wifi_disabled.xml  ic_wifi_enabled.xml  log_background.xml  material_spinner_underline.xml  ripple_tech.xml  rounded_button.xml  terminal_line_selector.xml
res/layout/: audio.xml  badusb.xml  base_layout.xml  bt.xml  bt_badbt.xml  bt_carwhisperer.xml  bt_ducky.xml  bt_main.xml  bt_spoof.xml  bt_tools.xml  can.xml  can_about_dialog.xml  can_canusb.xml  can_caribou.xml  can_icsim.xml  can_main.xml  can_msf.xml  can_tools.xml  carsenal_canusb.xml  carsenal_canusb_dialog.xml  carsenal_caribou.xml  carsenal_icsim.xml  carsenal_main.xml  carsenal_main_dialog.xml  carsenal_msf.xml  carsenal_sim.xml  carsenal_tools.xml  carsenal_tools_dialog.xml  chroot_manager.xml  chroot_metapackages_bottomsheet.xml  custom_commands_dialog.xml  customcommands_custom_dialog_view.xml  customcommands_recyclerview_main.xml  dialog_progress_material.xml  dialog_terminal_initial_command.xml  dialog_terminal_setup.xml  (+44 more)
(+130 files in other folders)
